syntax = "proto3";
package user_grpc;
option go_package="./douyin_grpc";

message DouYinUserRegisterRequest {
  string username = 1; // 注册用户名，最长32个字符
  string password = 2; // 密码，最长32个字符
}

message DouYinUserRegisterResponse {
    int32 status_code = 1; // 状态码，0-成功，其他值-失败
  optional string status_msg = 2; // 返回状态描述
   int64 user_id = 3; // 用户id
   string token = 4; // 用户鉴权token
}
message DouYinUserLogInRequest {
  string username = 1; // 注册用户名，最长32个字符
  string password = 2; // 密码，最长32个字符
}

message DouYinUserLogInResponse {
  int32 status_code = 1; // 状态码，0-成功，其他值-失败
  optional string status_msg = 2; // 返回状态描述
  int64 user_id = 3; // 用户id
  string token = 4; // 用户鉴权token
}

message User {
  int64 id = 1;
  string name = 2;
  int64 follow_count = 3;
  int64 follower_count = 4;
  bool is_follow = 5;
  string avatar = 6;
  string background_image = 7;
  string signature = 8;
  int64 total_favorited = 9;
  int64 work_count = 10;
  int64 favorite_count = 11;
}

message UserRequest {
  int64 user_id = 1;
  string token = 2;
}

message UserResponse {
  int32 status_code = 1;
  string status_msg = 2;
  User user = 3;
}
service SignUp{
  rpc Register(DouYinUserRegisterRequest)returns(DouYinUserRegisterResponse){}
}
service SignIn{
  rpc Login(DouYinUserLogInRequest)returns(DouYinUserLogInResponse){}
}
service UserInfo{
  rpc GetUserInfo(UserRequest)returns(UserResponse){}
}